plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.github'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springModulithVersion', '2.1.1')
	set('testcontainersVersion', '2.0.5')
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}

	dependencies {
		dependency 'org.apache.tomcat.embed:tomcat-embed-core:11.0.25'
		dependency 'org.apache.tomcat.embed:tomcat-embed-el:11.0.25'
		dependency 'org.apache.tomcat.embed:tomcat-embed-websocket:11.0.25'
	}
}

dependencies {
	// Web: exposes the REST endpoint (including embedded Jackson + Tomcat)
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Persistence: repository port output adapter (Hibernate + HikariCP)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Endpoint input parameter validation (Bean Validation)
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Modulith architecture support: checks boundaries between modules
	implementation 'org.springframework.modulith:spring-modulith-starter-core'

	// /actuator/health for the Docker/orchestrator healthcheck (own management port)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// In-memory database
	runtimeOnly 'com.h2database:h2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-data-jpa-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Test de rendimiento del modulo contra una BD real (no H2), levantada en Docker
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.postgresql:postgresql:42.7.13'
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'performance'
	}
}

// Test de rendimiento aparte: no debe correr en cada "./gradlew test" (levanta un
// Postgres real en Docker, es lento para el dia a dia). Se lanza a demanda con
// "./gradlew performanceTest"
tasks.register('performanceTest', Test) {
	useJUnitPlatform {
		includeTags 'performance'
	}
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	shouldRunAfter test
}

tasks.named('jar') {
	enabled = false
}
